Fixing part of:  (#11515)  menu dropdown z-index issues in IE.  Hates on IE

--- a/themes/cp_themes/corporate/css/iefix.css
+++ b/themes/cp_themes/corporate/css/iefix.css
@@ -11,3 +11,6 @@
 	margin-right: 		24px;
 
 }
+
+#mainMenu {position:relative;z-index:999;}
+ 
